Fix prefix alignment for icons

--- a/frontend/src/material-fields.override.scss
+++ b/frontend/src/material-fields.override.scss
@@ -10,7 +10,7 @@
     align-self: center;
   }
 
-  .mat-form-field-appearance-outline .mat-form-field-prefix {
+  .prefix-text.mat-form-field-appearance-outline .mat-form-field-prefix {
     top: 0;
   }
 
